cmake_minimum_required(VERSION 2.6)

project(BGLExamples)

set(Boost_USE_MULTITHREADED ON) # which is the default
find_package(Boost 1.46 REQUIRED)

include_directories(BEFORE ${Boost_INCLUDE_DIRS})

add_subdirectory(AdjacencyList)
add_subdirectory(BidirectionalGraph)
add_subdirectory(DijkstraUndirected)
add_subdirectory(PropertyMap)
add_subdirectory(AdjacentVertices)
add_subdirectory(Directed)
add_subdirectory(ReadGraph)
add_subdirectory(BetweennessCentralityClustering)
add_subdirectory(EdgeDescriptor)
add_subdirectory(RelabelInputVertices)
add_subdirectory(BFS)
add_subdirectory(EdgeExists)
add_subdirectory(SetAllWeights)
add_subdirectory(BundledProperties)
add_subdirectory(filtered_graph)
add_subdirectory(SimplePoint)
add_subdirectory(BundledPropertySet)
# add_subdirectory(GraphCut)
add_subdirectory(SubGraph)
add_subdirectory(grid_graph)
add_subdirectory(Topology)
add_subdirectory(CopyGraph)
add_subdirectory(HamiltonianCircuit)
add_subdirectory(TravelingSalesman)
add_subdirectory(CreateGraph)
add_subdirectory(InvisibleEdges)
add_subdirectory(Undirected)
add_subdirectory(d_ary_heap)
add_subdirectory(MaxFlow)
add_subdirectory(VertexIds)
add_subdirectory(DFS)
add_subdirectory(NumberOfNeighbors)
add_subdirectory(VertexNames)
add_subdirectory(DijkstraComputePath)
add_subdirectory(NumberOfVertices)
add_subdirectory(VertexProperties)
add_subdirectory(DijkstraDirected)
add_subdirectory(WriteGraph)

